# kurs_jum

./: .gitignore  readme.txt
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: main.rs  pc_settings.rs
custom_server/: Cargo.toml
custom_server/src/: db.rs  main.rs
custom_server/src/utils/: macros.rs  try_froms.rs
custom_shell/: Cargo.toml
custom_shell/src/: api.rs  error.rs  main.rs
ka_shell/: Cargo.toml
ka_shell/src/: main.rs
